--- a/style.css
+++ b/style.css
@@ -332,11 +332,58 @@ a:hover {
 
 .document-link {
     font-family: var(--font-sans);
-    font-weight: 500;
+    font-weight: 400;
     font-size: 15px;
-    display: inline-flex;
-    align-items: center;
-    gap: 10px;
+    display: inline;
+    line-height: 1.5;
+}
+
+/* Link Icons Base */
+.document-link::after,
+.archive-details a::after {
+    content: "";
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    margin-left: 6px;
+    background-color: currentColor;
+    -webkit-mask-size: contain;
+    mask-size: contain;
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    vertical-align: middle;
+    opacity: 0.8;
+}
+
+/* Web Link Icon (External) */
+.document-link[href^="http"]::after,
+.archive-details a[href^="http"]::after {
+    -webkit-mask-image: url('assets/icon-external.svg');
+    mask-image: url('assets/icon-external.svg');
+}
+
+/* Archive Link Icon (PDF) */
+.document-link[href$=".pdf"]::after,
+.archive-details a[href$=".pdf"]::after {
+    -webkit-mask-image: url('assets/icon-archive.svg');
+    mask-image: url('assets/icon-archive.svg');
+}
+
+.document-link:hover::after,
+.archive-details a:hover::after {
+    opacity: 1;
+}
+
+.good-practice-links {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 16px;
+}
+
+.document-sub-link {
+    display: flex;
+    flex-direction: column;
 }
 
 .meta {
