Update offset badge hex

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     /* Light Mode Palette */
     --color-bg: #FFFEFC;
     --color-bg-offset: #FDFAF5;
-    --color-bg-offset-badge: #FCF1DF;
+    --color-bg-offset-badge: #F5EEE2;
     --color-bg-invert: #0A0A0A;
     --color-text: #0A0A0A;
     --color-text-secondary: #636374;
